Fix chart title causing overflow

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -183,6 +183,13 @@ body,
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+}
+
+.chart .title {
+  position: absolute;
+  top: -80px;
+  font-size: 1.5rem;
 }
 
 .company-title {
